--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -11,7 +11,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardViewEdit"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_margin="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +26,7 @@
             <ImageView
                 android:id="@+id/imageViewEdit"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="300dp"
                 app:srcCompat="@drawable/plant1" />
 
         </LinearLayout>
