--- a/app/src/main/res/layout/plant_item.xml
+++ b/app/src/main/res/layout/plant_item.xml
@@ -42,5 +42,12 @@
                 android:textSize="16sp"
                 android:textStyle="bold" />
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Added change 3"
+            android:textSize="48sp" />
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
